add cucumber to project dependencies , design add reservation BDD test